--- a/SuperRocket/pom.xml
+++ b/SuperRocket/pom.xml
@@ -137,6 +137,13 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.4.3</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+		
 	    
 	
 		<!-- Test -->
